@@ -71,11 +71,11 @@ CREATE TABLE `#__banners` (
   `clickurl` VARCHAR(200) NOT NULL DEFAULT '',
   `state` TINYINT(3) NOT NULL DEFAULT '0',
   `catid` INTEGER UNSIGNED NOT NULL DEFAULT 0,
-  `description` TEXT NOT NULL DEFAULT '',
+  `description` TEXT NOT NULL,
   `sticky` TINYINT(1) UNSIGNED NOT NULL DEFAULT 0,
   `ordering` INTEGER NOT NULL DEFAULT 0,
-  `metakey` TEXT NOT NULL DEFAULT '',
-  `params` TEXT NOT NULL DEFAULT '',
+  `metakey` TEXT NOT NULL,
+  `params` TEXT NOT NULL,
   `own_prefix` TINYINT(1) NOT NULL DEFAULT '0',
   `metakey_prefix` VARCHAR(255) NOT NULL DEFAULT '',
   `purchase_type` TINYINT NOT NULL DEFAULT '-1',
@@ -109,7 +109,7 @@ CREATE TABLE `#__banner_clients` (
   `state` TINYINT(3) NOT NULL DEFAULT '0',
   `checked_out` INTEGER UNSIGNED NOT NULL DEFAULT '0',
   `checked_out_time` DATETIME NOT NULL default '0000-00-00 00:00:00',
-  `metakey` TEXT NOT NULL DEFAULT '',
+  `metakey` TEXT NOT NULL,
   `own_prefix` TINYINT NOT NULL DEFAULT '0',
   `metakey_prefix` VARCHAR(255) NOT NULL default '',
   `purchase_type` TINYINT NOT NULL DEFAULT '-1',
@@ -406,9 +406,9 @@ CREATE TABLE `#__extensions` (
   `access` TINYINT(3) UNSIGNED NOT NULL DEFAULT '1',
   `protected` TINYINT(3) NOT NULL DEFAULT '0',
   `manifest_cache` TEXT  NOT NULL DEFAULT '',
-  `params` TEXT NOT NULL DEFAULT '',
-  `custom_data` text NOT NULL DEFAULT '',
-  `system_data` text NOT NULL DEFAULT '',
+  `params` TEXT NOT NULL,
+  `custom_data` text NOT NULL,
+  `system_data` text NOT NULL,
   `checked_out` int(10) unsigned NOT NULL default '0',
   `checked_out_time` datetime NOT NULL default '0000-00-00 00:00:00',
   `ordering` int(11) default '0',
